# scape-xcorrsound

./: CMakeLists.txt
apps/: CMakeLists.txt
libs/core/: CMakeLists.txt  wavcore.cpp  wavcore.h
libs/sound_index/: CMakeLists.txt
